Added js for global functions

--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
-<html>
+﻿<html>
 
 <head>
-    <title>yotic's blog</title>
+    <title>yotic - crazy csharp'er</title>
     <link rel="icon" type="image/png" href="/yotic_icon_64x64.png">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="global.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono" rel="stylesheet">
+    <script type="text/javascript" src="global.js"></script>
 </head>
 
 <body>
-    <img src="Main.png" class="center">
-    </img>
-    <!--
-    <div>
-        <img src="yotic_icon_512x512.png" width="192" height="192"></img>
-    </div>
-    -->
+
 </body>
 
 </html>
