Main page is done

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<html>
+﻿<html style="position: absolute;; left: 50%; transform: translate(-50%, 0);" class="center noselect">
 
 <head>
     <title>yotic - crazy csharp'er</title>
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+
+
 
 </body>
 
